tests/baselines/reference/functionOverloads20.errors.txt
tests/cases/compiler/functionOverloads20.ts(1,1): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/compiler/functionOverloads20.ts (1 errors) ====
    function foo(bar:{a:number;}): number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function foo(bar:{a:string;}): string;
    function foo(bar:{a:any;}): string {return ""}
    